fix(ui): enhance contrast of some elements in dark mode

--- a/weblate/static/style-dark.css
+++ b/weblate/static/style-dark.css
@@ -727,7 +727,7 @@ fieldset[disabled] .btn-default.focus {
 }
 .btn-primary {
   color: #fffdfa;
-  background-color: #2eccaa;
+  background-color: #1c8f75;
   border-color: #8b8172;
 }
 .btn-primary:focus,
@@ -2021,8 +2021,8 @@ button.list-group-item-danger.active:focus {
   border-top-color: #186372;
 }
 .card:has(.card-header.text-bg-info) > .card-header .badge {
-  color: #cdf4ff;
-  background-color: #2b637d;
+  color: #cdf4ff !important;
+  background-color: #2b637d !important;
 }
 .card:has(.card-header.text-bg-info)
   > .card-footer
@@ -2048,8 +2048,8 @@ button.list-group-item-danger.active:focus {
   border-top-color: #77540c;
 }
 .card:has(.card-header.text-bg-warning) > .card-header .badge {
-  color: #ffffd0;
-  background-color: #796034;
+  color: #ffffd0 !important;
+  background-color: #796034 !important;
 }
 .card:has(.card-header.text-bg-warning)
   > .card-footer
@@ -2075,8 +2075,8 @@ button.list-group-item-danger.active:focus {
   border-top-color: #484d50;
 }
 .card:has(.card-header.text-bg-danger) > .card-header .badge {
-  color: #ff7559;
-  background-color: #1a1d1e;
+  color: #ac2109 !important;
+  background-color: #1a1d1e !important;
 }
 .card:has(.card-header.text-bg-danger)
   > .card-footer
